# rune

./: Cargo.toml  example-file-watcher.rs  template.html  test_file_watcher_integration.rs
.github/workflows/: autofix.yml  ci.yml
plugins/editor/: Cargo.toml
plugins/editor/examples/: editor_integration_demo.rs
plugins/editor/src/: cursor_manager.rs  editor_state.rs  file_sync.rs  inline_renderer.rs  keyboard_shortcuts.rs  lib.rs  live_editor.rs  render_trigger.rs  session.rs  syntax_highlighter.rs  syntax_parser.rs
plugins/editor/static/: editor.js
plugins/file-watcher/: Cargo.toml
plugins/file-watcher/src/: lib.rs
plugins/renderer/: Cargo.toml
plugins/renderer/examples/: basic_usage.rs  pipeline_demo.rs  simple_test.rs  theme_integration_test.rs
plugins/renderer/src/: lib.rs
plugins/server/: Cargo.toml
plugins/server/examples/: basic_server.rs  theme_server_test.rs
plugins/server/src/: editor_handlers.rs  handlers.rs  lib.rs  simple_live_editor.rs
plugins/server/tests/: test_markdown_api.rs
plugins/theme/: Cargo.toml
plugins/theme/src/: lib.rs
rune-cli/: Cargo.toml
rune-cli/src/: main.rs
rune-core/: Cargo.toml
rune-core/examples/: config_validation_demo.rs  event_bus_demo.rs  graceful_startup_shutdown_demo.rs  plugin_context_demo.rs
rune-core/src/: ast.rs  config.rs  error.rs  event.rs  event_test.rs  file_watcher.rs  lib.rs  parser.rs  plugin.rs  plugin_context_test.rs  plugin_test.rs  quill.rs  render.rs  renderer.rs  state.rs
