[workspace]
members = [
    "rune-core",
    "rune-cli",
    "plugins/editor",
    "plugins/file-watcher",
    "plugins/renderer",
    "plugins/server",
    "plugins/theme",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "fs", "time", "signal", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Web server dependencies
axum = { version = "0.7.9", features = ["ws"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
futures-util = "0.3"

# File watching
notify = "8.2.0"

# Markdown rendering
markdown = "1.0"

# CLI
clap = { version = "4.5.45", features = ["derive"] }

# Development dependencies
axum-test = { version = "16.0", features = ["ws"] }
tempfile = "3.0"
tokio-test = "0.4"
