[package]
name = "rune-core"
version = "0.1.0"
edition = "2021"
description = "Core engine and interfaces for the Rune markdown live editor"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "5.0"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }